overflow for fixed sample text area

--- a/src/components/TextArea/TextArea.css
+++ b/src/components/TextArea/TextArea.css
@@ -9,7 +9,8 @@
 
 .fixed-text, .dynamic-text{
     background-color: rgba(72, 45, 45, 0.9);
-    min-height: 180px;
+    max-height: 180px;
+    overflow-y: scroll;
     width: 100%;
     font-size: 1.1rem;
     box-shadow: 0 1px 2px rgba(41, 38, 38, 0.5), 0 3px 4px rgba(54, 53, 53, 0.95);
